--- a/Interfaces/de.lproj/SearchFolder.strings
+++ b/Interfaces/de.lproj/SearchFolder.strings
@@ -1,46 +1,66 @@
-/* NSPanel () : <title:> (oid:6) */
-"" = "";
 
-/* NSButton (+) : <title:+> (oid:31) */
-"+" = "+";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "32"; */
+"32.title" = "OtherViews";
 
-/* NSButton (-) : <title:-> (oid:29) */
-"-" = "-";
+/* Class = "NSMenuItem"; title = "Field names go here"; ObjectID = "33"; */
+"33.title" = "Field names go here";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:10) */
-"Cancel" = "Abbrechen";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "34"; */
+"34.title" = "OtherViews";
 
-/* NSMenuItem : <title:Field names go here> (oid:33) */
-"Field names go here" = "Feldname gehört hierhin";
+/* Class = "NSMenuItem"; title = "Operators go here"; ObjectID = "56"; */
+"56.title" = "Operators go here";
 
-/* NSMenuItem : <title:Item1> (oid:88) */
-"Item1" = "Objekt 1";
+/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "62"; */
+"62.title" = "Nothing";
 
-/* NSMenuItem : <title:Item2> (oid:90) */
-"Item2" = "Objekt 2";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "64"; */
+"64.title" = "OtherViews";
 
-/* NSMenuItem : <title:Item3> (oid:89) */
-"Item3" = "Objekt 3";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "74"; */
+"74.title" = "OtherViews";
 
-/* NSMenuItem : <title:Nothing> (oid:82) */
-"Nothing" = "Nichts";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
+"75.title" = "Item3";
 
-/* NSMenuItem : <title:Operators go here> (oid:56) */
-"Operators go here" = "Operatoren müssen hier eingefügt werden";
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
+"76.title" = "Item2";
 
-/* NSMenu : <title:OtherViews> (oid:87) */
-"OtherViews" = "Andere Ansichten";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "80"; */
+"80.title" = "OtherViews";
 
-/* NSButton (Save) : <title:Save> (oid:9) */
-"Save" = "OK";
+/* Class = "NSMenuItem"; title = "keiner"; ObjectID = "82"; */
+"82.title" = "keiner";
 
-/* NSTextField (Show all articles that match) : <title:Show all articles that match> (oid:58) */
-"Show all articles that match" = "Zeige alle Artikel die passen";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "87"; */
+"87.title" = "OtherViews";
 
-/* NSTextField (Smart folder name: ) : <title:Smart folder name:
-> (oid:7) */
-"Smart folder name:\n" = "Name des intelligenten Ordners:\n";
+/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
+"88.title" = "Item1";
 
-/* NSTextField (of the following conditions:) : <title:of the following conditions:> (oid:84) */
-"of the following conditions:" = "der folgenden Eigenschaften";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
+"89.title" = "Item3";
 
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
+"90.title" = "Item2";
+
+/* Class = "NSTextFieldCell"; title = "Name des intelligenten Ordners:\n"; ObjectID = "94"; */
+"94.title" = "Name des intelligenten Ordners:";
+
+/* Class = "NSButtonCell"; title = "OK"; ObjectID = "96"; */
+"96.title" = "OK";
+
+/* Class = "NSButtonCell"; title = "Abbrechen"; ObjectID = "97"; */
+"97.title" = "Abbrechen";
+
+/* Class = "NSTextFieldCell"; title = "Enthält Artikel mit"; ObjectID = "98"; */
+"98.title" = "Enthält Artikel mit";
+
+/* Class = "NSTextFieldCell"; title = "der folgenden Eigenschaften"; ObjectID = "100"; */
+"100.title" = "der folgenden Eigenschaften";
+
+/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
+"102.title" = "-";
+
+/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
+"104.title" = "+";
