--- a/Interfaces/eu.lproj/SearchFolder.strings
+++ b/Interfaces/eu.lproj/SearchFolder.strings
@@ -1,46 +1,66 @@
-/* NSPanel () : <title:> (oid:6) */
-"" = "";
 
-/* NSButton (+) : <title:+> (oid:31) */
-"+" = "+";
+/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "32"; */
+"32.title" = "Bestelakoak";
 
-/* NSButton (-) : <title:-> (oid:29) */
-"-" = "-";
+/* Class = "NSMenuItem"; title = "Fitxategi izenak hemen doaz"; ObjectID = "33"; */
+"33.title" = "Fitxategi izenak hemen doaz";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:10) */
-"Cancel" = "Ezeztatu";
+/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "34"; */
+"34.title" = "Bestelakoak";
 
-/* NSMenuItem : <title:Field names go here> (oid:33) */
-"Field names go here" = "Fitxategi izenak hemen doaz";
+/* Class = "NSMenuItem"; title = "Operazioak hemen doaz"; ObjectID = "56"; */
+"56.title" = "Operazioak hemen doaz";
 
-/* NSMenuItem : <title:Item1> (oid:88) */
-"Item1" = "Item1";
+/* Class = "NSMenuItem"; title = "Ezer"; ObjectID = "62"; */
+"62.title" = "Ezer";
 
-/* NSMenuItem : <title:Item2> (oid:90) */
-"Item2" = "Item2";
+/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "64"; */
+"64.title" = "Bestelakoak";
 
-/* NSMenuItem : <title:Item3> (oid:89) */
-"Item3" = "Item3";
+/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "74"; */
+"74.title" = "Bestelakoak";
 
-/* NSMenuItem : <title:Nothing> (oid:82) */
-"Nothing" = "Ezer";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
+"75.title" = "Item3";
 
-/* NSMenuItem : <title:Operators go here> (oid:56) */
-"Operators go here" = "Operazioak hemen doaz";
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
+"76.title" = "Item2";
 
-/* NSMenu : <title:OtherViews> (oid:87) */
-"OtherViews" = "Bestelakoak";
+/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "80"; */
+"80.title" = "Bestelakoak";
 
-/* NSButton (Save) : <title:Save> (oid:9) */
-"Save" = "Gorde";
+/* Class = "NSMenuItem"; title = "Ezer"; ObjectID = "82"; */
+"82.title" = "Ezer";
 
-/* NSTextField (Show all articles that match) : <title:Show all articles that match> (oid:58) */
-"Show all articles that match" = "Erakutsi zerikusia duten artikulu guztiak";
+/* Class = "NSMenu"; title = "Bestelakoak"; ObjectID = "87"; */
+"87.title" = "Bestelakoak";
 
-/* NSTextField (Smart folder name: ) : <title:Smart folder name:
-> (oid:7) */
-"Smart folder name:\n" = "Direktorio adimenduaren izena:\n";
+/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
+"88.title" = "Item1";
 
-/* NSTextField (of the following conditions:) : <title:of the following conditions:> (oid:84) */
-"of the following conditions:" = "honako baldintzekin:";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
+"89.title" = "Item3";
 
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
+"90.title" = "Item2";
+
+/* Class = "NSTextFieldCell"; title = "Direktorio adimenduaren izena:"; ObjectID = "94"; */
+"94.title" = "Direktorio adimenduaren izena:";
+
+/* Class = "NSButtonCell"; title = "Gorde"; ObjectID = "96"; */
+"96.title" = "Gorde";
+
+/* Class = "NSButtonCell"; title = "Ezeztatu"; ObjectID = "97"; */
+"97.title" = "Ezeztatu";
+
+/* Class = "NSTextFieldCell"; title = "Erakutsi zerikusia duten artikulu guztiak"; ObjectID = "98"; */
+"98.title" = "Erakutsi zerikusia duten artikulu guztiak";
+
+/* Class = "NSTextFieldCell"; title = "honako baldintzekin:"; ObjectID = "100"; */
+"100.title" = "honako baldintzekin:";
+
+/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
+"102.title" = "-";
+
+/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
+"104.title" = "+";
