--- a/Interfaces/ru.lproj/SearchFolder.strings
+++ b/Interfaces/ru.lproj/SearchFolder.strings
@@ -1,46 +1,66 @@
-/* NSPanel () : <title:> (oid:6) */
-"" = "";
 
-/* NSButton (+) : <title:+> (oid:31) */
-"+" = "+";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "32"; */
+"32.title" = "OtherViews";
 
-/* NSButton (-) : <title:-> (oid:29) */
-"-" = "-";
+/* Class = "NSMenuItem"; title = "Названия полей"; ObjectID = "33"; */
+"33.title" = "Названия полей";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:10) */
-"Cancel" = "Отмена";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "34"; */
+"34.title" = "OtherViews";
 
-/* NSMenuItem : <title:Field names go here> (oid:33) */
-"Field names go here" = "Название полей";
+/* Class = "NSMenuItem"; title = "Операторы"; ObjectID = "56"; */
+"56.title" = "Операторы";
 
-/* NSMenuItem : <title:Item1> (oid:88) */
-"Item1" = "Item1";
+/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "62"; */
+"62.title" = "Nothing";
 
-/* NSMenuItem : <title:Item2> (oid:90) */
-"Item2" = "Item2";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "64"; */
+"64.title" = "OtherViews";
 
-/* NSMenuItem : <title:Item3> (oid:89) */
-"Item3" = "Item3";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "74"; */
+"74.title" = "OtherViews";
 
-/* NSMenuItem : <title:Nothing> (oid:82) */
-"Nothing" = "Ни одному";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
+"75.title" = "Item3";
 
-/* NSMenuItem : <title:Operators go here> (oid:56) */
-"Operators go here" = "Операторы";
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
+"76.title" = "Item2";
 
-/* NSMenu : <title:OtherViews> (oid:87) */
-"OtherViews" = "OtherViews";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "80"; */
+"80.title" = "OtherViews";
 
-/* NSButton (Save) : <title:Save> (oid:9) */
-"Save" = "Сохранить";
+/* Class = "NSMenuItem"; title = "Ни одному"; ObjectID = "82"; */
+"82.title" = "Ни одному";
 
-/* NSTextField (Show all articles that match) : <title:Show all articles that match> (oid:58) */
-"Show all articles that match" = "Показыывать статьи, соответствующие";
+/* Class = "NSMenu"; title = "OtherViews"; ObjectID = "87"; */
+"87.title" = "OtherViews";
 
-/* NSTextField (Smart folder name: ) : <title:Smart folder name:
-> (oid:7) */
+/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
+"88.title" = "Item1";
 
-"Smart folder name:\n" = "Имя новой смарт-папки:\n";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
+"89.title" = "Item3";
 
-/* NSTextField (of the following conditions:) : <title:of the following conditions:> (oid:84) */
-"of the following conditions:" = "из следующих условий:";
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
+"90.title" = "Item2";
+
+/* Class = "NSTextFieldCell"; title = "Имя новой смарт-папки:"; ObjectID = "94"; */
+"94.title" = "Имя новой смарт-папки:";
+
+/* Class = "NSButtonCell"; title = "Сохранить"; ObjectID = "96"; */
+"96.title" = "Сохранить";
+
+/* Class = "NSButtonCell"; title = "Отмена"; ObjectID = "97"; */
+"97.title" = "Отмена";
+
+/* Class = "NSTextFieldCell"; title = "Показывать статьи, соответствующие"; ObjectID = "98"; */
+"98.title" = "Показывать статьи, соответствующие";
+
+/* Class = "NSTextFieldCell"; title = "из следующих условий:"; ObjectID = "100"; */
+"100.title" = "из следующих условий:";
+
+/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
+"102.title" = "-";
+
+/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
+"104.title" = "+";
