--- a/Interfaces/tr.lproj/SearchFolder.strings
+++ b/Interfaces/tr.lproj/SearchFolder.strings
@@ -1,46 +1,66 @@
-/* NSPanel () : <title:> (oid:6) */
-"" = "";
 
-/* NSButton (+) : <title:+> (oid:31) */
-"+" = "+";
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "32"; */
+"32.title" = "DiğerGörünümler";
 
-/* NSButton (-) : <title:-> (oid:29) */
-"-" = "-";
+/* Class = "NSMenuItem"; title = "Alan adları buraya yazılır"; ObjectID = "33"; */
+"33.title" = "Alan adları buraya yazılır";
 
-/* NSButton (Cancel) : <title:Cancel> (oid:10) */
-"Cancel" = "İptal";
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "34"; */
+"34.title" = "DiğerGörünümler";
 
-/* NSMenuItem : <title:Field names go here> (oid:33) */
-"Field names go here" = "Alan adları buraya yazılır";
+/* Class = "NSMenuItem"; title = "Operatörler buraya yazılır"; ObjectID = "56"; */
+"56.title" = "Operatörler buraya yazılır";
 
-/* NSMenuItem : <title:Item1> (oid:88) */
-"Item1" = "Item1";
+/* Class = "NSMenuItem"; title = "Hiçbir şey"; ObjectID = "62"; */
+"62.title" = "Hiçbir şey";
 
-/* NSMenuItem : <title:Item2> (oid:90) */
-"Item2" = "Item2";
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "64"; */
+"64.title" = "DiğerGörünümler";
 
-/* NSMenuItem : <title:Item3> (oid:89) */
-"Item3" = "Item3";
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "74"; */
+"74.title" = "DiğerGörünümler";
 
-/* NSMenuItem : <title:Nothing> (oid:82) */
-"Nothing" = "Hiçbir şey";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "75"; */
+"75.title" = "Item3";
 
-/* NSMenuItem : <title:Operators go here> (oid:56) */
-"Operators go here" = "Operatörler buraya yazılır";
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "76"; */
+"76.title" = "Item2";
 
-/* NSMenu : <title:OtherViews> (oid:87) */
-"OtherViews" = "DiğerGörünümler";
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "80"; */
+"80.title" = "DiğerGörünümler";
 
-/* NSButton (Save) : <title:Save> (oid:9) */
-"Save" = "Kaydet";
+/* Class = "NSMenuItem"; title = "Hiçbir şey"; ObjectID = "82"; */
+"82.title" = "Hiçbir şey";
 
-/* NSTextField (Show all articles that match) : <title:Show all articles that match> (oid:58) */
-"Show all articles that match" = "Uyan tüm makaleleri göster";
+/* Class = "NSMenu"; title = "DiğerGörünümler"; ObjectID = "87"; */
+"87.title" = "DiğerGörünümler";
 
-/* NSTextField (Smart folder name: ) : <title:Smart folder name:
-> (oid:7) */
-"Smart folder name:\n" = "Akıllı klasör adı:\n";
+/* Class = "NSMenuItem"; title = "Item1"; ObjectID = "88"; */
+"88.title" = "Item1";
 
-/* NSTextField (of the following conditions:) : <title:of the following conditions:> (oid:84) */
-"of the following conditions:" = "şu koşulları içeren:";
+/* Class = "NSMenuItem"; title = "Item3"; ObjectID = "89"; */
+"89.title" = "Item3";
 
+/* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
+"90.title" = "Item2";
+
+/* Class = "NSTextFieldCell"; title = "Akıllı klasör adı:"; ObjectID = "94"; */
+"94.title" = "Akıllı klasör adı:";
+
+/* Class = "NSButtonCell"; title = "Kaydet"; ObjectID = "96"; */
+"96.title" = "Kaydet";
+
+/* Class = "NSButtonCell"; title = "İptal"; ObjectID = "97"; */
+"97.title" = "İptal";
+
+/* Class = "NSTextFieldCell"; title = "Uyan tüm makaleleri göster"; ObjectID = "98"; */
+"98.title" = "Uyan tüm makaleleri göster";
+
+/* Class = "NSTextFieldCell"; title = "şu koşulları içeren:"; ObjectID = "100"; */
+"100.title" = "şu koşulları içeren:";
+
+/* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
+"102.title" = "-";
+
+/* Class = "NSButtonCell"; title = "+"; ObjectID = "104"; */
+"104.title" = "+";
