--- a/Interfaces/zh-Hans.lproj/SearchFolder.strings
+++ b/Interfaces/zh-Hans.lproj/SearchFolder.strings
@@ -2,17 +2,17 @@
 /* Class = "NSMenu"; title = "OtherViews"; ObjectID = "32"; */
 "32.title" = "OtherViews";
 
-/* Class = "NSMenuItem"; title = "Nomes de campos entram aqui"; ObjectID = "33"; */
-"33.title" = "Nomes de campos entram aqui";
+/* Class = "NSMenuItem"; title = "Field names go here"; ObjectID = "33"; */
+"33.title" = "Field names go here";
 
 /* Class = "NSMenu"; title = "OtherViews"; ObjectID = "34"; */
 "34.title" = "OtherViews";
 
-/* Class = "NSMenuItem"; title = "Operadores entram aqui"; ObjectID = "56"; */
-"56.title" = "Operadores entram aqui";
+/* Class = "NSMenuItem"; title = "Operators go here"; ObjectID = "56"; */
+"56.title" = "Operators go here";
 
-/* Class = "NSMenuItem"; title = "Nada"; ObjectID = "62"; */
-"62.title" = "Nada";
+/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "62"; */
+"62.title" = "Nothing";
 
 /* Class = "NSMenu"; title = "OtherViews"; ObjectID = "64"; */
 "64.title" = "OtherViews";
@@ -29,8 +29,8 @@
 /* Class = "NSMenu"; title = "OtherViews"; ObjectID = "80"; */
 "80.title" = "OtherViews";
 
-/* Class = "NSMenuItem"; title = "Nada"; ObjectID = "82"; */
-"82.title" = "Nada";
+/* Class = "NSMenuItem"; title = "Nothing"; ObjectID = "82"; */
+"82.title" = "Nothing";
 
 /* Class = "NSMenu"; title = "OtherViews"; ObjectID = "87"; */
 "87.title" = "OtherViews";
@@ -44,20 +44,20 @@
 /* Class = "NSMenuItem"; title = "Item2"; ObjectID = "90"; */
 "90.title" = "Item2";
 
-/* Class = "NSTextFieldCell"; title = "Nome da pasta inteligente:"; ObjectID = "94"; */
-"94.title" = "Nome da pasta inteligente:";
+/* Class = "NSTextFieldCell"; title = "智能文件夹名称:\n"; ObjectID = "94"; */
+"94.title" = "智能文件夹名称:\n";
 
-/* Class = "NSButtonCell"; title = "Salvar"; ObjectID = "96"; */
-"96.title" = "Salvar";
+/* Class = "NSButtonCell"; title = "保存"; ObjectID = "96"; */
+"96.title" = "保存";
 
-/* Class = "NSButtonCell"; title = "Cancelar"; ObjectID = "97"; */
-"97.title" = "Cancelar";
+/* Class = "NSButtonCell"; title = "取消"; ObjectID = "97"; */
+"97.title" = "取消";
 
-/* Class = "NSTextFieldCell"; title = "Mostrar todos os artigos que combinam"; ObjectID = "98"; */
-"98.title" = "Mostrar todos os artigos que combinam";
+/* Class = "NSTextFieldCell"; title = "显示所有符合"; ObjectID = "98"; */
+"98.title" = "显示所有符合";
 
-/* Class = "NSTextFieldCell"; title = "das seguintes condições:"; ObjectID = "100"; */
-"100.title" = "das seguintes condições:";
+/* Class = "NSTextFieldCell"; title = "以下条件的条目:"; ObjectID = "100"; */
+"100.title" = "以下条件的条目:";
 
 /* Class = "NSButtonCell"; title = "-"; ObjectID = "102"; */
 "102.title" = "-";
