--- a/Interfaces/cs.lproj/InfoWindow.strings
+++ b/Interfaces/cs.lproj/InfoWindow.strings
@@ -1,50 +1,38 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
+/* Class = "NSWindow"; title = "Okno"; ObjectID = "5"; */
 "5.title" = "Okno";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Box";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "(jméno složky)"; ObjectID = "104"; */
 "104.title" = "(jméno složky)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Obnoveno:"; ObjectID = "105"; */
 "105.title" = "Obnoveno:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "(datum poslední obnovy)"; ObjectID = "106"; */
 "106.title" = "(datum poslední obnovy)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Zkontrolovat"; ObjectID = "109"; */
 "109.title" = "Zkontrolovat";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "URL zdroje:"; ObjectID = "110"; */
 "110.title" = "URL zdroje:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Jméno:"; ObjectID = "111"; */
 "111.title" = "Jméno:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Heslo:"; ObjectID = "112"; */
 "112.title" = "Heslo:";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Automaticky aktualizovat"; ObjectID = "115"; */
 "115.title" = "Automaticky aktualizovat";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Ověření totožnosti:"; ObjectID = "116"; */
 "116.title" = "Ověření totožnosti:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Velikost:"; ObjectID = "117"; */
 "117.title" = "Velikost:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Nečteno:"; ObjectID = "118"; */
 "118.title" = "Nečteno:";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,13 +41,13 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Odebíráno"; ObjectID = "121"; */
 "121.title" = "Odebíráno";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Obecné:"; ObjectID = "122"; */
 "122.title" = "Obecné:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Popis:"; ObjectID = "124"; */
 "124.title" = "Popis:";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
