--- a/Interfaces/es.lproj/InfoWindow.strings
+++ b/Interfaces/es.lproj/InfoWindow.strings
@@ -1,50 +1,38 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
+/* Class = "NSWindow"; title = "Ventana"; ObjectID = "5"; */
 "5.title" = "Ventana";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Cuadro";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Cuadro";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Cuadro";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Cuadro";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "(Nombre de la carpeta)"; ObjectID = "104"; */
 "104.title" = "(Nombre de la carpeta)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Última actualización:"; ObjectID = "105"; */
 "105.title" = "Última actualización:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "(Fecha de última actualización)"; ObjectID = "106"; */
 "106.title" = "(Fecha de última actualización)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validar"; ObjectID = "109"; */
 "109.title" = "Validar";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "URL de la fuente:"; ObjectID = "110"; */
 "110.title" = "URL de la fuente:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Nombre de usuario:"; ObjectID = "111"; */
 "111.title" = "Nombre de usuario:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Contraseña:\n"; ObjectID = "112"; */
 "112.title" = "Contraseña:\n";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Actualizar autenticación"; ObjectID = "115"; */
 "115.title" = "Actualizar autenticación";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Autenticación:"; ObjectID = "116"; */
 "116.title" = "Autenticación:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Tamaño:"; ObjectID = "117"; */
 "117.title" = "Tamaño:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "No leídos:\n"; ObjectID = "118"; */
 "118.title" = "No leídos:\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,14 +41,14 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Suscrito"; ObjectID = "121"; */
 "121.title" = "Suscrito";
 
 /* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
 "122.title" = "General:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Descripción:"; ObjectID = "124"; */
 "124.title" = "Descripción:";
 
-/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+/* Class = "NSButtonCell"; title = "Cargar artículos HTML completamente"; ObjectID = "126"; */
 "126.title" = "Cargar artículos HTML completamente";
