--- a/Interfaces/eu.lproj/InfoWindow.strings
+++ b/Interfaces/eu.lproj/InfoWindow.strings
@@ -1,50 +1,38 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
+/* Class = "NSWindow"; title = "Lehioa"; ObjectID = "5"; */
 "5.title" = "Lehioa";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Kaxa";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Kaxa";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Kaxa";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Kaxa";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "(Direktorio izena)"; ObjectID = "104"; */
 "104.title" = "(Direktorio izena)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Azken Eguneratuak:"; ObjectID = "105"; */
 "105.title" = "Azken Eguneratuak:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "(Azken eguneratze data)"; ObjectID = "106"; */
 "106.title" = "(Azken eguneratze data)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Frogatu"; ObjectID = "109"; */
 "109.title" = "Frogatu";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "URL jarioa:"; ObjectID = "110"; */
 "110.title" = "URL jarioa:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Erabiltzaile izena:"; ObjectID = "111"; */
 "111.title" = "Erabiltzaile izena:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Pasahitza:\n"; ObjectID = "112"; */
 "112.title" = "Pasahitza:\n";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Berritu Autentifikazioa"; ObjectID = "115"; */
 "115.title" = "Berritu Autentifikazioa";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Autentifikazioa:"; ObjectID = "116"; */
 "116.title" = "Autentifikazioa:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Tamaina:"; ObjectID = "117"; */
 "117.title" = "Tamaina:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Irakurri gabeak:\n"; ObjectID = "118"; */
 "118.title" = "Irakurri gabeak:\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,13 +41,13 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Harpidetuta"; ObjectID = "121"; */
 "121.title" = "Harpidetuta";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Orokorra:"; ObjectID = "122"; */
 "122.title" = "Orokorra:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Deskripzioa:"; ObjectID = "124"; */
 "124.title" = "Deskripzioa:";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
