--- a/Interfaces/fr.lproj/InfoWindow.strings
+++ b/Interfaces/fr.lproj/InfoWindow.strings
@@ -1,50 +1,38 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
+/* Class = "NSWindow"; title = "Fenêtre"; ObjectID = "5"; */
 "5.title" = "Fenêtre";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Boîte";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Boîte";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Boîte";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Boîte";
 
 /* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
 "104.title" = "(Folder name)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Dernier rafraîchissement :"; ObjectID = "105"; */
 "105.title" = "Dernier rafraîchissement :";
 
 /* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
 "106.title" = "(Last refresh date)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Vérifier"; ObjectID = "109"; */
 "109.title" = "Vérifier";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "URL du flux :"; ObjectID = "110"; */
 "110.title" = "URL du flux :";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Nom d'utilisateur :"; ObjectID = "111"; */
 "111.title" = "Nom d'utilisateur :";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Mot de passe :\n"; ObjectID = "112"; */
 "112.title" = "Mot de passe :\n";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Mise à jour de l'identification"; ObjectID = "115"; */
 "115.title" = "Mise à jour de l'identification";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Identification :"; ObjectID = "116"; */
 "116.title" = "Identification :";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Taille :"; ObjectID = "117"; */
 "117.title" = "Taille :";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Non lus :\n"; ObjectID = "118"; */
 "118.title" = "Non lus :\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,14 +41,14 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Abonné"; ObjectID = "121"; */
 "121.title" = "Abonné";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Général :"; ObjectID = "122"; */
 "122.title" = "Général :";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Description :"; ObjectID = "124"; */
 "124.title" = "Description :";
 
-/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+/* Class = "NSButtonCell"; title = "Afficher la page complète immédiatement"; ObjectID = "126"; */
 "126.title" = "Afficher la page complète immédiatement";
