--- a/Interfaces/it.lproj/InfoWindow.strings
+++ b/Interfaces/it.lproj/InfoWindow.strings
@@ -1,50 +1,38 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
+/* Class = "NSWindow"; title = "Finestra"; ObjectID = "5"; */
 "5.title" = "Finestra";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Box";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "(nome Cartella)"; ObjectID = "104"; */
 "104.title" = "(nome Cartella)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Ultimo Aggiornamento:"; ObjectID = "105"; */
 "105.title" = "Ultimo Aggiornamento:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "(Data ultimo aggiornameto)"; ObjectID = "106"; */
 "106.title" = "(Data ultimo aggiornameto)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Convalida"; ObjectID = "109"; */
 "109.title" = "Convalida";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "URL Feed:"; ObjectID = "110"; */
 "110.title" = "URL Feed:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Nome utente:"; ObjectID = "111"; */
 "111.title" = "Nome utente:";
 
 /* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
 "112.title" = "Password:\n";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Aggiorna Autenticazione"; ObjectID = "115"; */
 "115.title" = "Aggiorna Autenticazione";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Autenticazione:"; ObjectID = "116"; */
 "116.title" = "Autenticazione:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Dim.:"; ObjectID = "117"; */
 "117.title" = "Dim.:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Non letti:\n"; ObjectID = "118"; */
 "118.title" = "Non letti:\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,14 +41,14 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Iscritto"; ObjectID = "121"; */
 "121.title" = "Iscritto";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Generale:"; ObjectID = "122"; */
 "122.title" = "Generale:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Descrizione:"; ObjectID = "124"; */
 "124.title" = "Descrizione:";
 
-/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+/* Class = "NSButtonCell"; title = "Use Web Page for Articles"; ObjectID = "126"; */
 "126.title" = "Use Web Page for Articles";
