--- a/Interfaces/ko.lproj/InfoWindow.strings
+++ b/Interfaces/ko.lproj/InfoWindow.strings
@@ -2,49 +2,37 @@
 /* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
 "5.title" = "Window";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Box";
-
 /* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
 "104.title" = "(Folder name)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "최종 갱신일:"; ObjectID = "105"; */
 "105.title" = "최종 갱신일:";
 
 /* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
 "106.title" = "(Last refresh date)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "피드 확인"; ObjectID = "109"; */
 "109.title" = "피드 확인";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "피드 URL:"; ObjectID = "110"; */
 "110.title" = "피드 URL:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "이름:"; ObjectID = "111"; */
 "111.title" = "이름:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "암호:"; ObjectID = "112"; */
 "112.title" = "암호:";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "인증 갱신"; ObjectID = "115"; */
 "115.title" = "인증 갱신";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "인증:"; ObjectID = "116"; */
 "116.title" = "인증:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "전체:"; ObjectID = "117"; */
 "117.title" = "전체:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "현재:"; ObjectID = "118"; */
 "118.title" = "현재:";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,14 +41,14 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "구독하기"; ObjectID = "121"; */
 "121.title" = "구독하기";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "일반:"; ObjectID = "122"; */
 "122.title" = "일반:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "설명:"; ObjectID = "124"; */
 "124.title" = "설명:";
 
-/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+/* Class = "NSButtonCell"; title = "Use Web Page for Articles"; ObjectID = "126"; */
 "126.title" = "Use Web Page for Articles";
