--- a/Interfaces/pt.lproj/InfoWindow.strings
+++ b/Interfaces/pt.lproj/InfoWindow.strings
@@ -2,49 +2,37 @@
 /* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
 "5.title" = "Window";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Box";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "(Nome da pasta)"; ObjectID = "104"; */
 "104.title" = "(Nome da pasta)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Última Actualização:"; ObjectID = "105"; */
 "105.title" = "Última Actualização:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "(Data da última actualização)"; ObjectID = "106"; */
 "106.title" = "(Data da última actualização)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validar"; ObjectID = "109"; */
 "109.title" = "Validar";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "URL da fonte:"; ObjectID = "110"; */
 "110.title" = "URL da fonte:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Nome de utilizador:"; ObjectID = "111"; */
 "111.title" = "Nome de utilizador:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Palavra-Passe:"; ObjectID = "112"; */
 "112.title" = "Palavra-Passe:";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Actualizar autenticação"; ObjectID = "115"; */
 "115.title" = "Actualizar autenticação";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Autenticação:"; ObjectID = "116"; */
 "116.title" = "Autenticação:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Tamanho:"; ObjectID = "117"; */
 "117.title" = "Tamanho:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Não lidos:"; ObjectID = "118"; */
 "118.title" = "Não lidos:";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,13 +41,13 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Subscrito"; ObjectID = "121"; */
 "121.title" = "Subscrito";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Geral:"; ObjectID = "122"; */
 "122.title" = "Geral:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Descrição:"; ObjectID = "124"; */
 "124.title" = "Descrição:";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
