--- a/Interfaces/ru.lproj/InfoWindow.strings
+++ b/Interfaces/ru.lproj/InfoWindow.strings
@@ -2,50 +2,38 @@
 /* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
 "5.title" = "Window";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Box";
-
 /* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
 "104.title" = "(Folder name)";
 
 /* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
-"105.title" = "Обновлена:";
+"105.title" = "Last Refreshed:";
 
 /* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
 "106.title" = "(Last refresh date)";
 
 /* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
-"109.title" = "Проверить";
+"109.title" = "Validate";
 
 /* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
-"110.title" = "URL ленты:";
+"110.title" = "Feed URL:";
 
 /* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
-"111.title" = "Имя:";
+"111.title" = "User name:";
 
 /* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
-"112.title" = "Пароль:\n";
+"112.title" = "Password:\n";
 
 /* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
-"115.title" = "Авторизироваться";
+"115.title" = "Update Authentication";
 
 /* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
-"116.title" = "Авторизация:";
+"116.title" = "Authentication:";
 
 /* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
-"117.title" = "Статей:";
+"117.title" = "Size:";
 
 /* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
-"118.title" = "Новых:\n";
+"118.title" = "Unread:\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
 "119.title" = "\n";
@@ -54,13 +42,13 @@
 "120.title" = "\n";
 
 /* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
-"121.title" = "Подписка";
+"121.title" = "Subscribed";
 
 /* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
-"122.title" = "Общие:";
+"122.title" = "General:";
 
 /* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
-"124.title" = "Описание:";
+"124.title" = "Description:";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
-"126.title" = "Загружать весь HTML-код";
+"126.title" = "Load Full HTML Articles";
