--- a/Interfaces/sv.lproj/InfoWindow.strings
+++ b/Interfaces/sv.lproj/InfoWindow.strings
@@ -1,50 +1,38 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
+/* Class = "NSWindow"; title = "Fönster"; ObjectID = "5"; */
 "5.title" = "Fönster";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Låda";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Låda";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Låda";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Låda";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "(Mappnamn)"; ObjectID = "104"; */
 "104.title" = "(Mappnamn)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Senaste uppdaterad:"; ObjectID = "105"; */
 "105.title" = "Senaste uppdaterad:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "(Senaste uppdateringsdatum)"; ObjectID = "106"; */
 "106.title" = "(Senaste uppdateringsdatum)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Validera"; ObjectID = "109"; */
 "109.title" = "Validera";
 
 /* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
 "110.title" = "Feed URL:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Användarnamn:"; ObjectID = "111"; */
 "111.title" = "Användarnamn:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Lösenord:\n"; ObjectID = "112"; */
 "112.title" = "Lösenord:\n";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Uppdatera authentisering"; ObjectID = "115"; */
 "115.title" = "Uppdatera authentisering";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Authentisering:"; ObjectID = "116"; */
 "116.title" = "Authentisering:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Storlek:"; ObjectID = "117"; */
 "117.title" = "Storlek:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Olästa:\n"; ObjectID = "118"; */
 "118.title" = "Olästa:\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,14 +41,14 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Prenumererad"; ObjectID = "121"; */
 "121.title" = "Prenumererad";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Generellt:"; ObjectID = "122"; */
 "122.title" = "Generellt:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Beskrivning:"; ObjectID = "124"; */
 "124.title" = "Beskrivning:";
 
-/* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
+/* Class = "NSButtonCell"; title = "Use Web Page for Articles"; ObjectID = "126"; */
 "126.title" = "Use Web Page for Articles";
