--- a/Interfaces/tr.lproj/InfoWindow.strings
+++ b/Interfaces/tr.lproj/InfoWindow.strings
@@ -2,49 +2,37 @@
 /* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
 "5.title" = "Window";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Box";
-
 /* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
 "104.title" = "(Folder name)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "En son yenilendi:"; ObjectID = "105"; */
 "105.title" = "En son yenilendi:";
 
 /* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
 "106.title" = "(Last refresh date)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Doğrula"; ObjectID = "109"; */
 "109.title" = "Doğrula";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "Besleme URLsi:"; ObjectID = "110"; */
 "110.title" = "Besleme URLsi:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Kullanıcı adı:"; ObjectID = "111"; */
 "111.title" = "Kullanıcı adı:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Şifre:"; ObjectID = "112"; */
 "112.title" = "Şifre:";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Yetkilendirmeyi Güncelle"; ObjectID = "115"; */
 "115.title" = "Yetkilendirmeyi Güncelle";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Yetki:"; ObjectID = "116"; */
 "116.title" = "Yetki:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Boyut:"; ObjectID = "117"; */
 "117.title" = "Boyut:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Okunmadı:\n"; ObjectID = "118"; */
 "118.title" = "Okunmadı:\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,13 +41,13 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Abone olundu"; ObjectID = "121"; */
 "121.title" = "Abone olundu";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Genel:"; ObjectID = "122"; */
 "122.title" = "Genel:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Açıklama:"; ObjectID = "124"; */
 "124.title" = "Açıklama:";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
