--- a/Interfaces/uk.lproj/InfoWindow.strings
+++ b/Interfaces/uk.lproj/InfoWindow.strings
@@ -1,50 +1,38 @@
 
-/* Class = "NSWindow"; title = "Window"; ObjectID = "5"; */
+/* Class = "NSWindow"; title = "Вікно"; ObjectID = "5"; */
 "5.title" = "Вікно";
 
-/* Class = "NSBox"; title = "Box"; ObjectID = "95"; */
-"95.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "97"; */
-"97.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "99"; */
-"99.title" = "Box";
-
-/* Class = "NSBox"; title = "Box"; ObjectID = "101"; */
-"101.title" = "Box";
-
-/* Class = "NSTextFieldCell"; title = "(Folder name)"; ObjectID = "104"; */
+/* Class = "NSTextFieldCell"; title = "(Назва папки)"; ObjectID = "104"; */
 "104.title" = "(Назва папки)";
 
-/* Class = "NSTextFieldCell"; title = "Last Refreshed:"; ObjectID = "105"; */
+/* Class = "NSTextFieldCell"; title = "Останнє оновлення:"; ObjectID = "105"; */
 "105.title" = "Останнє оновлення:";
 
-/* Class = "NSTextFieldCell"; title = "(Last refresh date)"; ObjectID = "106"; */
+/* Class = "NSTextFieldCell"; title = "(Дата останнього оновлення)"; ObjectID = "106"; */
 "106.title" = "(Дата останнього оновлення)";
 
-/* Class = "NSButtonCell"; title = "Validate"; ObjectID = "109"; */
+/* Class = "NSButtonCell"; title = "Валідувати"; ObjectID = "109"; */
 "109.title" = "Валідувати";
 
-/* Class = "NSButtonCell"; title = "Feed URL:"; ObjectID = "110"; */
+/* Class = "NSButtonCell"; title = "URL:"; ObjectID = "110"; */
 "110.title" = "URL:";
 
-/* Class = "NSTextFieldCell"; title = "User name:"; ObjectID = "111"; */
+/* Class = "NSTextFieldCell"; title = "Ім'я користувача:"; ObjectID = "111"; */
 "111.title" = "Ім'я користувача:";
 
-/* Class = "NSTextFieldCell"; title = "Password:\n"; ObjectID = "112"; */
+/* Class = "NSTextFieldCell"; title = "Пароль:\n"; ObjectID = "112"; */
 "112.title" = "Пароль:\n";
 
-/* Class = "NSButtonCell"; title = "Update Authentication"; ObjectID = "115"; */
+/* Class = "NSButtonCell"; title = "Оновити"; ObjectID = "115"; */
 "115.title" = "Оновити";
 
-/* Class = "NSButtonCell"; title = "Authentication:"; ObjectID = "116"; */
+/* Class = "NSButtonCell"; title = "Аутентифікація:"; ObjectID = "116"; */
 "116.title" = "Аутентифікація:";
 
-/* Class = "NSTextFieldCell"; title = "Size:"; ObjectID = "117"; */
+/* Class = "NSTextFieldCell"; title = "Розмір:"; ObjectID = "117"; */
 "117.title" = "Розмір:";
 
-/* Class = "NSTextFieldCell"; title = "Unread:\n"; ObjectID = "118"; */
+/* Class = "NSTextFieldCell"; title = "Непрочитані:\n"; ObjectID = "118"; */
 "118.title" = "Непрочитані:\n";
 
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "119"; */
@@ -53,13 +41,13 @@
 /* Class = "NSTextFieldCell"; title = "\n"; ObjectID = "120"; */
 "120.title" = "\n";
 
-/* Class = "NSButtonCell"; title = "Subscribed"; ObjectID = "121"; */
+/* Class = "NSButtonCell"; title = "Підписаний"; ObjectID = "121"; */
 "121.title" = "Підписаний";
 
-/* Class = "NSButtonCell"; title = "General:"; ObjectID = "122"; */
+/* Class = "NSButtonCell"; title = "Загальне:"; ObjectID = "122"; */
 "122.title" = "Загальне:";
 
-/* Class = "NSButtonCell"; title = "Description:"; ObjectID = "124"; */
+/* Class = "NSButtonCell"; title = "Опис:"; ObjectID = "124"; */
 "124.title" = "Опис:";
 
 /* Class = "NSButtonCell"; title = "Load Full HTML Articles"; ObjectID = "126"; */
